required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

- AGG fix a bug when rendering polygons with tiled pixmaps

- Added ability to apply a validation pattern to cgi-based attribute queries
  using the layer metadata key 'qstring_validation_pattern'

- Fixed msDebug causing a crash with VS2005 (#2287)

- Added stronger checks on libpdf version in configure script (#2278)

- Added msGetVersionInt() to MapScript (ms_GetVersionInt() in PHP) (#2279)

- _isnan prototype for MSVC builds from <float.h> #2277

- AGG: Fix a bug when rendering brushed lines with vector or pixmap symbols
  (artifacts could appear on outline)
  
- AGG: Adjust symbol height when brushing a line with a vector symbol so that
  the line width isn't truncated

- Only include process.h on win32 (non-cygwin) systems, moved from 
  maptemplate.h to mapserver.h.  (#2276)


Version 5.0.0-beta6 (2007-08-29)
--------------------------------

- Fixed problem with outline of polygons rendered twice with OGR
  STYLEITEM AUTO and AGG output (#2271)

- Fixed problem compiling with only WMS/WFS client but none of the 
  WMS, WFS, WCS or SOS server options enabled (#2272)

- Fixed buffer overflow in handling of WMS SRS=AUTO:... (#1824)

- AGG: render thick lines and polygon outlines with round caps and joins
  by default

- Typo in mapfile writing (#2267)

- Fixed mapping of class->keyimage in PHP MapScript (#2268)

- Look for libagg under lib64 subdir as well in configure (#2265)

- AGG: revert previous optimizations. now use caching of the rendering object
  to avoid the re-creation of some structures each time a shape is drawn
